fix: make multiple code blocks scroll instead of overflowing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,6 +7,11 @@ body {
     font-weight: 425;
 }
 
+pre code {
+    display: block;
+    overflow-x: auto;
+}
+
 article {
     max-width: 95rem;
     display: grid;
